--- a/contact.html
+++ b/contact.html
@@ -26,50 +26,46 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-        <h1>Our Courses</h1>
+        <h1>Contact Us</h1>
     </section>
 
-    <section class="course">
-        <h1>Courses We Offer</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-        <div class="row">
-            <div class="course-col">
-                <h3>Intermediate</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit officia, quo a pariatur perspiciatis deleniti rem cumque iusto ad nobis, iure provident autem! Laudantium facilis provident repellat impedit!
-                </p>
-            </div>
-            <div class="course-col">
-                <h3>Degree</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit officia, quo a pariatur perspiciatis deleniti rem cumque iusto ad nobis, iure provident autem! Laudantium facilis provident repellat impedit!
-                </p>
-            </div>
-            <div class="course-col">
-                <h3>Post Graduation</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit officia, quo a pariatur perspiciatis deleniti rem cumque iusto ad nobis, iure provident autem! Laudantium facilis provident repellat impedit!
-                </p>
-            </div>
-        </div>
+    <section class="location">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3867.3478539932926!2d121.14597937576914!3d14.232918985971432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33bd623f86aed823%3A0x73d3008db710fa11!2sSt.%20Vincent%20College%20Of%20Cabuyao!5e0!3m2!1sen!2sph!4v1714665612028!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-   
 
-    <section class="facilities">
-        <h1>Our Facilities</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <section class="contact-us">
         <div class="row">
-            <div class="facilities-col">
-                <img src="images/library.png">
-                <h3>World Class Library</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit official.</p>
+            <div class="contact-col">
+                <div>
+                    <i class="fa fa-home"></i>
+                    <span>
+                        <h5>XYZ Road, ABC Building</h5>
+                        <p>Bangalore, Karnataka, IN</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <span>
+                        <h5>+124334131343</h5>
+                        <p>Monday to Saturday, 10AM to 6PM</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-envelope-o"></i>
+                    <span>
+                        <h5>sungjinwoo@gmail.com</h5>
+                        <p>Email us your query</p>
+                    </span>
+                </div>
             </div>
-            <div class="facilities-col">
-                <img src="images/basketball.png">
-                <h3>Largest Play Ground</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit official.</p>
-            </div>
-            <div class="facilities-col">
-                <img src="images/cafeteria.png">
-                <h3>Tasty and Healthy Food</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit official.</p>
+            <div class="contact-col">
+                <form action="form-handler.php" method="post">
+                    <input type="text" name="name" placeholder="Enter your name" required>    
+                    <input type="email" name="email" placeholder="Enter email address" required>    
+                    <input type="text" name="subject" placeholder="Enter your subject" required>
+                    <textarea rows="8" name="message" placeholder="Message" required></textarea> 
+                    <button type="submit" class="hero-btn red-btn">SendMessage</button>   
+                </form> 
             </div>
         </div>
     </section>
