images error (3rd try)

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="Images/logo.png"></a>
+            <a href="index.html"><img src="images/logo.png"></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
@@ -65,19 +65,19 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
         <div class="row">
             <div class="campus-col">
-                <img src="Images/london.png">
+                <img src="images/london.png">
                 <div class="layer">
                     <h3>LONDON</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="Images/newyork.png">
+                <img src="images/newyork.png">
                 <div class="layer">
                     <h3>NEW YORK</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="Images/washington.png">
+                <img src="images/washington.png">
                 <div class="layer">
                     <h3>WASHINGTON</h3>
                 </div>
@@ -90,17 +90,17 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
         <div class="row">
             <div class="facilities-col">
-                <img src="Images/library.png">
+                <img src="images/library.png">
                 <h3>World Class Library</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit official.</p>
             </div>
             <div class="facilities-col">
-                <img src="Images/basketball.png">
+                <img src="images/basketball.png">
                 <h3>Largest Play Ground</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit official.</p>
             </div>
             <div class="facilities-col">
-                <img src="Images/cafeteria.png">
+                <img src="images/cafeteria.png">
                 <h3>Tasty and Healthy Food</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat sed impedit official.</p>
             </div>
@@ -112,7 +112,7 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
         <div class="row">
             <div class="testimonial-col">
-                <img src="Images/user1.jpg">
+                <img src="images/user1.jpg">
                 <div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente excepturi nulla, doloremque eum vitae, temporibus quis commodi reprehenderit ipsum odit quaerat rem ipsa, inventore aspernatur nemo quas delectus iusto hic</p>
                     <h3>Christine Berkley</h3>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="testimonial-col">
-                <img src="Images/user2.jpg">
+                <img src="images/user2.jpg">
                 <div>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente excepturi nulla, doloremque eum vitae, temporibus quis commodi reprehenderit ipsum odit quaerat rem ipsa, inventore aspernatur nemo quas delectus iusto hic</p>
                     <h3>David Beyer</h3>
